--- a/src/Components/Canvas/Canvas.css
+++ b/src/Components/Canvas/Canvas.css
@@ -2,5 +2,6 @@ canvas {
     width: 500px;
     height: 500px;
     image-rendering: pixelated;
-    background-color: black;
+    border: 1px solid #ccc;
+    background-color: rgb(255, 255, 255);
 }
