--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,4 +1,40 @@
 #search {
     flex: 1 0 100px;
-    text-align: center;
+}
+
+#search form {
+    justify-content: left;
+    background-color: white;
+    width: 50%;
+    max-width: 500px;
+    height: 30px;
+    padding: 5px;
+    border-radius: 10px;
+    display: inline-block;
+}
+
+#search input {
+    height: 100%;
+    width: 80%;
+    float: left;
+    min-width: 10px;
+    box-sizing: border-box;
+    font-size: 1em;
+    border: 0px solid #ccc;
+}
+
+#search input:focus {
+    outline: none;
+}
+
+#search button {
+    width: 20%;
+    max-width: 25px;
+    padding-right: 5px;
+    float: right;
+    background-color: transparent;
+    border: none;
+    height: 100%;
+    font-size: 1em;
+    cursor: pointer;
 }
