--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,16 @@
 #header {
     display: flex;
+    flex-direction: row;
     background-color: greenyellow;
     height: 100px;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 768px) {
+    #header {
+        max-width: 100%;
+        height: 50px;
+        max-height: 50px;
+    }
 }
