--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,5 +1,5 @@
 #search {
-    flex: 1 0 100px;
+    flex: 1 0 auto;
 }
 
 #search form {
@@ -7,6 +7,7 @@
     background-color: white;
     width: 50%;
     max-width: 500px;
+    min-width: 140px;
     height: 30px;
     padding: 5px;
     border-radius: 10px;
