--- a/src/Components/Settings/Settings.css
+++ b/src/Components/Settings/Settings.css
@@ -1,5 +1,14 @@
 #settings {
-    flex: 0 1 30px;
+    flex: 0 1 20px;
     padding-right: 50px;
-    min-width: 80px;
+    min-width: 40px;
+    height: 100%;
+}
+
+@media (max-width: 768px) {
+    #settings {
+        max-width: 10px;
+        max-height: 100%;
+        min-width: 0px;
+    }
 }
