--- a/src/Components/Canvas/Canvas.css
+++ b/src/Components/Canvas/Canvas.css
@@ -2,4 +2,7 @@ canvas {
     image-rendering: pixelated;
     border: 1px solid #ccc;
     background-color: rgb(255, 255, 255);
+    display: block;
+    width: 100vw;
+    height: auto;
 }
