--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -1,3 +1,10 @@
 #title h1 {
     text-transform: capitalize;
+    font-size: 2em;
+}
+
+@media (max-width: 768px) {
+    #title h1 {
+        font-size: 1.2em;
+    }
 }
