Better title when search fails

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -32,6 +32,7 @@
     width: 20%;
     max-width: 25px;
     padding-right: 5px;
+    padding-top: 5px;
     float: right;
     background-color: transparent;
     border: none;
