--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,8 +3,12 @@
     flex-direction: row;
     background-color: greenyellow;
     height: 100px;
+    width: 100%;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 @media (max-width: 768px) {
